add GET /api/categories

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dev": "nodemon listen.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
+    "nodemon": "^2.0.18",
     "pg": "^8.7.3",
     "supertest": "^6.2.4"
   },
