--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
   "homepage": "https://github.com/northcoders/be-nc-games#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "husky": "^7.0.0",
-    "jest": "^27.5.1",
-    "jest-extended": "^2.0.0",
+    "dotenv": "^16.0.0",
+   
+  
+    "pg": "^8.7.3",
     "pg-format": "^1.0.4"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
+  
     "nodemon": "^2.0.18",
-    "pg": "^8.7.3",
-    "supertest": "^6.2.4"
+    "jest": "^27.5.1",
+    "jest-extended": "^2.0.0",
+    "supertest": "^6.2.4",
+    "husky": "^7.0.0"
   },
   "jest": {
     "setupFilesAfterEnv": [
