--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-games#readme",
   "dependencies": {
-    "express": "^4.18.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "express": "^4.18.1",
     "pg": "^8.7.3",
     "pg-format": "^1.0.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18",
+    "husky": "^7.0.0",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
-    "supertest": "^6.2.4",
-    "husky": "^7.0.0"
+    "nodemon": "^2.0.18",
+    "supertest": "^6.2.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
